--- a/fresh2019/page107.html
+++ b/fresh2019/page107.html
@@ -59,12 +59,12 @@
 			<div class="bg-box"></div>
 			<div class="logo-box">
 				<a href="index.html">
-					<img src="img/_mode/header/logo.png">
+					<img src="img/mode/header/logo.png">
 				</a>
 			</div>
 			<ul class="icon-box">
-				<!-- <li class="live"><a href="live.html"><img src="img/_mode/header/live.png"></a></li> -->
-				<!-- <li class="fb wk-fb-share"><img src="img/_mode/header/fb.png"></li> -->
+				<!-- <li class="live"><a href="live.html"><img src="img/mode/header/live.png"></a></li> -->
+				<!-- <li class="fb wk-fb-share"><img src="img/mode/header/fb.png"></li> -->
 			</ul>
 			<ul class="page-link-box">
 				<li class="link1"><a href="index.html">求職主場</a></li>
@@ -87,7 +87,7 @@
 						<li class="li5 hide"><a href="invite.html">企業求才刊登</a></li>
 						<!-- <li class="li4 hide icon-box">
 							<div class="flex-box">
-								<span class="wk-fb-share"><img src="img/_mode/header/fb.png"></span>
+								<span class="wk-fb-share"><img src="img/mode/header/fb.png"></span>
 							</div>
 						</li> -->
 					</ul>
@@ -109,12 +109,12 @@
 		<!-- 畫面置底錨點區塊 -->
 		<div class="anchor-box">
 			<ul>
-				<li><a href="index.html"><img src="img/_mode/anchor-box/icon1.png"><span>求職主場</span></a></li>
-				<li><a href="live.html"><img src="img/_mode/anchor-box/icon4.png"><span>好Young直播</span></a></li>
-				<li><a href="sstandc.html"><img src="img/_mode/anchor-box/icon6.png"><span>面試必勝</span></a></li>
-				<!-- <li><a href="invite.html"><img src="img/_mode/anchor-box/icon3.png"><span>求才刊登</span></a></li> -->
-				<li><a href="https://m.learn.104.com.tw/mobile/project/190319_lccnet/index.html"><img src="img/_mode/anchor-box/icon2.png"><span>占卜找工作</span></a></li>
-				<!-- <li class="wk-fb-share"><img src="img/_mode/anchor-box/icon5.png"></li> -->
+				<li><a href="index.html"><img src="img/mode/anchor-box/icon1.png"><span>求職主場</span></a></li>
+				<li><a href="live.html"><img src="img/mode/anchor-box/icon4.png"><span>好Young直播</span></a></li>
+				<li><a href="sstandc.html"><img src="img/mode/anchor-box/icon6.png"><span>面試必勝</span></a></li>
+				<!-- <li><a href="invite.html"><img src="img/mode/anchor-box/icon3.png"><span>求才刊登</span></a></li> -->
+				<li><a href="https://m.learn.104.com.tw/mobile/project/190319_lccnet/index.html"><img src="img/mode/anchor-box/icon2.png"><span>占卜找工作</span></a></li>
+				<!-- <li class="wk-fb-share"><img src="img/mode/anchor-box/icon5.png"></li> -->
 			</ul>
 		</div>
 
@@ -1515,13 +1515,13 @@
 
 		<footer>
 			<div class="people-box">
-				<span class="people people1"><img src="img/_mode/footer/people1.png"></span>
-				<span class="people people2"><img src="img/_mode/footer/people2.png"></span>
-				<span class="people people3"><img src="img/_mode/footer/people3.png"></span>
-				<span class="people people4"><img src="img/_mode/footer/people4.png"></span>
-				<span class="people people5"><img src="img/_mode/footer/people5.png"></span>
-				<span class="people people6"><img src="img/_mode/footer/people6.png"></span>
-				<span class="people people7"><img src="img/_mode/footer/people7.png"></span>
+				<span class="people people1"><img src="img/mode/footer/people1.png"></span>
+				<span class="people people2"><img src="img/mode/footer/people2.png"></span>
+				<span class="people people3"><img src="img/mode/footer/people3.png"></span>
+				<span class="people people4"><img src="img/mode/footer/people4.png"></span>
+				<span class="people people5"><img src="img/mode/footer/people5.png"></span>
+				<span class="people people6"><img src="img/mode/footer/people6.png"></span>
+				<span class="people people7"><img src="img/mode/footer/people7.png"></span>
 			</div>
 			<div class="copyright">一零四資訊科技股份有限公司｜版權所有©2019</div>
 		</footer>
