--- a/fresh2019/sstandc.html
+++ b/fresh2019/sstandc.html
@@ -88,12 +88,12 @@
             <div class="bg-box"></div>
             <div class="logo-box">
                 <a href="index.html">
-                    <img src="img/_mode/header/logo.png">
+                    <img src="img/mode/header/logo.png">
                 </a>
             </div>
             <ul class="icon-box">
-                <!-- <li class="live"><a href="live.html"><img src="img/_mode/header/live.png"></a></li> -->
-                <!-- <li class="fb wk-fb-share"><img src="img/_mode/header/fb.png"></li> -->
+                <!-- <li class="live"><a href="live.html"><img src="img/mode/header/live.png"></a></li> -->
+                <!-- <li class="fb wk-fb-share"><img src="img/mode/header/fb.png"></li> -->
             </ul>
             <ul class="page-link-box">
                 <li class="link1"><a href="index.html">求職主場</a></li>
@@ -116,7 +116,7 @@
                         <li class="li5 hide"><a href="invite.html">企業求才刊登</a></li>
                         <!-- <li class="li4 hide icon-box">
                             <div class="flex-box">
-                                <span class="wk-fb-share"><img src="img/_mode/header/fb.png"></span>
+                                <span class="wk-fb-share"><img src="img/mode/header/fb.png"></span>
                             </div>
                         </li> -->
                     </ul>
