--- a/fresh2019/index.html
+++ b/fresh2019/index.html
@@ -47,7 +47,7 @@
 			<div class="bg-box"></div>
 			<div class="logo-box">
 				<a href="index.html">
-					<img src="fresh2019/img/mode/header/logo.png">
+					<img src="img/mode/header/logo.png">
 				</a>
 			</div>
 			<ul class="icon-box">
